kubernetes/manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: web-app
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/enable-gzip: "false"
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - host: <your_domain_address> # Put your domain address here for example test.mysite.com
      http:
        paths:
          - path: / 
            pathType: Prefix
            backend:
              service:
                name: web-app-service
                port:
                  number: 80
  # This section is only required if TLS is to be enabled for the Ingress
  tls:
    - hosts:
      - <your_domain_address> # Put your domain address here for example test.mysite.com
      secretName: majid-hopto-org-tls
